--- a/index.html
+++ b/index.html
@@ -4,18 +4,18 @@
 		<meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta property="og:title" content="심서연 - 프로필 링크">
-    <meta property="og:description" content="어서와 코딩은 처음이지?">
+    <meta property="og:title" content="sassy - profile">
+    <meta property="og:description" content="hello, world!">
     <meta property="og:image" content="3.png">
     <script type="text/javascript" src="https://s3.ap-northeast-2.amazonaws.com/materials.spartacodingclub.kr/free/sparta.js"></script>
-    <title>르탄이 - 프로필 링크</title>
+    <title>The_Greatest_Sassy - profile_link</title>
     <style>
         @import url('https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css');
         * {
             font-family: "Pretendard",serif;
         }
         body {
-            background-color: #44398a;
+            background-color: #684edb;
         }
         .profile {
             width: 100px;
@@ -26,7 +26,7 @@
 
             border : 2px solid white; 
 
-            background-image: url(3.png);
+            background-image: url(hi.png);
             background-position: center;
             background-size : cover; 
         }
@@ -95,12 +95,11 @@
 <body>
     <div class="wrap">
         <div class = "profile"></div>
-        <h1 class = "main">심서연 </h1>
+        <h1 class = "main">SASSY </h1>
         <p class = "sub">hello, world!  </p>
-        <a target="_blank" href="https://spartacodingclub.kr/">연락처</a>
-        <a target="_blank" href="https://hanghae99.spartacodingclub.kr/">인적사항</a>
-        <a target="_blank" href="https://chang.spartacodingclub.kr/">이력서</a>
-        <a target="_blank" href="https://ddingdong.spartacodingclub.kr/">포트폴리오</a>
+        <a target="_blank" href="https://blog.naver.com/sassya03">blog</a>
+        <a target="_blank" href="https://thegreatsassy.notion.site/Hello-World-0de4d43d5e2e466884f6b4c8d17fe7db">Notion</a>
+        <a target="_blank" href="https://thegreatsassy.notion.site/Portfolio-0c3a74b24200484c8a6ed8306326753d">portfolio</a>
     </div>
     
 </body>
