--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta property="og:title" content="sassy - profile">
     <meta property="og:description" content="hello, world!">
     <meta property="og:image" content="3.png">
-  
+
     <title>The_Greatest_Sassy - profile_link</title>
     <style>
         @import url('https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css');
@@ -29,6 +29,7 @@
             background-image: url(hi.png);
             background-position: center;
             background-size : cover; 
+            background-color: white;
         }
         .main {
             color : white;
